--- a/app/src/main/res/layout/fragment_repodata.xml
+++ b/app/src/main/res/layout/fragment_repodata.xml
@@ -3,6 +3,7 @@
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:foreground="?android:attr/selectableItemBackground"
               android:orientation="vertical">
 
     <android.support.v7.widget.CardView
