--- a/app/src/main/res/layout/fragment_repodata_list.xml
+++ b/app/src/main/res/layout/fragment_repodata_list.xml
@@ -9,6 +9,6 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="android.hipster.githubclient.activities.RepoDataFragment"
+    app:layoutManager="GridLayoutManager"
+    tools:context="android.hipster.githubclient.fragments.RepoDataFragment_"
     tools:listitem="@layout/fragment_repodata"/>
