--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,6 +14,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
+        app:cardBackgroundColor="@color/colorPrimary"
         android:layout_height="380dp"
         android:layout_margin="8dp">
 
@@ -22,8 +24,9 @@
 
             <ImageView
                 android:id="@+id/avatar"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="250dp"
+                android:layout_margin="16dp"
                 android:layout_alignParentRight="true"
                 android:scaleType="centerCrop"/>
 
@@ -31,17 +34,20 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/avatar"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@id/avatar"
                 android:maxLines="3"
                 android:padding="8dp"
-                android:textColor="#222"
+                android:textColor="@android:color/white"
                 android:textSize="22dp"
                 android:textStyle="bold"/>
 
             <TextView
+                android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/name"
+                android:layout_toLeftOf="@id/avatar"
                 android:maxLines="3"
                 android:padding="8dp"
                 android:textColor="#666"
