--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/main_content_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -23,7 +24,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 app:cardBackgroundColor="@android:color/white">
 
@@ -58,9 +59,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_below="@id/avatar"
+                        android:layout_marginRight="16dp"
                         android:maxLines="3"
                         android:padding="8dp"
-                        android:layout_marginRight="16dp"
                         android:textSize="16dp"
                         android:textStyle="bold"/>
 
@@ -69,10 +70,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/user_name"
-                        android:layout_toLeftOf="@id/avatar"
-                        android:text="@string/here_should_be_text_of_description"
                         android:maxLines="3"
+                        android:layout_margin="8dp"
                         android:padding="8dp"
+                        android:text="@string/here_should_be_text_of_description"
                         android:textColor="#666"
                         android:textSize="12dp"/>
 
@@ -80,13 +81,14 @@
                         android:id="@+id/repo_indicator_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@id/avatar"
                         android:layout_below="@id/name"
+                        android:layout_toLeftOf="@id/avatar"
                         android:orientation="vertical">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp">
 
                             <com.github.akashandroid90.imageletter.MaterialLetterIcon
                                 xmlns:image="http://schemas.android.com/apk/res-auto"
@@ -108,8 +110,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignBaseline="@id/forks_icon"
-                                android:layout_margin="8dp"
                                 android:layout_centerVertical="true"
+                                android:layout_margin="8dp"
                                 android:layout_toRightOf="@+id/forks_icon"
                                 android:text="@string/forks"
                                 android:textSize="18sp"/>
@@ -117,7 +119,6 @@
 
 
                         <RelativeLayout
-                            android:layout_marginTop="8dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
@@ -146,12 +147,9 @@
                                 android:textSize="18sp"/>
 
                         </RelativeLayout>
-
-
                     </LinearLayout>
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
-
         </LinearLayout>
 
     </ScrollView>
