--- a/app/src/main/res/layout/fragment_commit_data.xml
+++ b/app/src/main/res/layout/fragment_commit_data.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="fill_parent"
-        android:layout_height="350dp"
+        android:layout_height="@dimen/commit_item_height"
         android:layout_gravity="center"
         android:layout_margin="8dp"
         card_view:cardCornerRadius="4dp"
