--- a/app/src/main/res/layout/fragment_repodata.xml
+++ b/app/src/main/res/layout/fragment_repodata.xml
@@ -3,28 +3,26 @@
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:foreground="?android:attr/selectableItemBackground"
+              android:background="?attr/selectableItemBackground"
               android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_gravity="center"
         android:layout_margin="8dp"
-        card_view:cardBackgroundColor="@color/colorPrimary"
         card_view:cardCornerRadius="4dp"
         card_view:contentPadding="4dp">
 
-        <TextView
-            android:id="@+id/content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:textAppearance="?attr/textAppearanceListItem"/>
+            <TextView
+                android:id="@+id/content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/text_margin"
+                android:gravity="center"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@android:color/secondary_text_dark"
+                android:textStyle="bold"/>
     </android.support.v7.widget.CardView>
 </LinearLayout>
